--- a/blockly/app/views/blockly/index.html.erb
+++ b/blockly/app/views/blockly/index.html.erb
@@ -131,6 +131,49 @@
     <block type="minetest_materials"></block>
   </category>
 
+  <category name="Minetest TechMage" colour="%{BKY_COLOUR_HUE}">
+    <block type="minetest_add_entity">
+      <value name="x">
+        <shadow type="math_number">
+          <field name="NUM">0</field>
+        </shadow>
+      </value>
+      <value name="y">
+        <shadow type="math_number">
+          <field name="NUM">0</field>
+        </shadow>
+      </value>
+      <value name="z">
+        <shadow type="math_number">
+          <field name="NUM">0</field>
+        </shadow>
+      </value>
+      <value name="entity">
+        <block type="minetest_entity_sheep"></block>
+      </value>
+    </block>
+    <block type="minetest_move_forward"></block>
+    <block type="minetest_turn">
+      <field name="ACTION">turnLeft();</field>
+    </block>
+    <block type="minetest_turn">
+      <field name="ACTION">turnRight();</field>
+    </block>
+
+    <block type="minetest_wait">
+      <value name="seconds">
+        <shadow type="math_number">
+          <field name="NUM">1</field>
+        </shadow>
+      </value>
+    </block>
+    <block type="minetest_play_sound"></block>
+  </category>
+
+  <category name="Minetest Entities" colour="%{BKY_COLOUR_HUE}">
+    <block type="minetest_entity_sheep"></block>
+  </category>
+
   <category name="%{BKY_CATLOGIC}" colour="%{BKY_LOGIC_HUE}">
     <block type="controls_if"></block>
     <block type="logic_compare"></block>
