Replace minetest_node to minetest_blocks for #1

--- a/blockly/app/assets/javascripts/image_path.js.erb
+++ b/blockly/app/assets/javascripts/image_path.js.erb
@@ -9,5 +9,6 @@ end
 %>
 
 window.image_path = function(name) {
-  return <%= imgs.to_json %>[name];
+  var images = <%= imgs.to_json %>;
+  return images[name];
 }
