--- a/blockly/app/views/blockly/index.html.erb
+++ b/blockly/app/views/blockly/index.html.erb
@@ -128,7 +128,7 @@
 
     <block type="minetest_add_entity">
       <value name="entity">
-        <block type="minetest_entity_sheep"></block>
+        <block type="minetest_sheep_entity"></block>
       </value>
       <value name="x">
         <shadow type="math_number">
@@ -177,7 +177,7 @@
   </category>
 
   <category name="Minetest Entities" colour="%{BKY_COLOUR_HUE}">
-    <block type="minetest_entity_sheep"></block>
+    <block type="minetest_sheep_entity"></block>
   </category>
 
   <category name="%{BKY_CATLOGIC}" colour="%{BKY_LOGIC_HUE}">
