Add chicken entity block

--- a/blockly/app/views/blockly/index.html.erb
+++ b/blockly/app/views/blockly/index.html.erb
@@ -177,6 +177,7 @@
   </category>
 
   <category name="Minetest Entities" colour="%{BKY_COLOUR_HUE}">
+    <block type="minetest_chicken_entity"></block>
     <block type="minetest_sheep_entity"></block>
   </category>
 
