Add place block for entity

--- a/blockly/app/views/blockly/index.html.erb
+++ b/blockly/app/views/blockly/index.html.erb
@@ -162,6 +162,16 @@
       </value>
     </block>
     <block type="minetest_play_sound"></block>
+    <block type="minetest_place">
+      <value name="material">
+        <block type="minetest_dirt_block"></block>
+      </value>
+    </block>
+    <block type="minetest_place_ahead">
+      <value name="material">
+        <block type="minetest_dirt_block"></block>
+      </value>
+    </block>
   </category>
 
   <category name="Minetest Blocks" colour="%{BKY_COLOUR_HUE}">
