Add wool blocks

--- a/blockly/app/views/blockly/index.html.erb
+++ b/blockly/app/views/blockly/index.html.erb
@@ -175,6 +175,22 @@
   </category>
 
   <category name="Minetest Blocks" colour="%{BKY_COLOUR_HUE}">
+    <block type="minetest_wool_random_block"></block>
+    <block type="minetest_wool_white_block"></block>
+    <block type="minetest_wool_grey_block"></block>
+    <block type="minetest_wool_dark_grey_block"></block>
+    <block type="minetest_wool_black_block"></block>
+    <block type="minetest_wool_blue_block"></block>
+    <block type="minetest_wool_cyan_block"></block>
+    <block type="minetest_wool_green_block"></block>
+    <block type="minetest_wool_dark_green_block"></block>
+    <block type="minetest_wool_yellow_block"></block>
+    <block type="minetest_wool_orange_block"></block>
+    <block type="minetest_wool_brown_block"></block>
+    <block type="minetest_wool_red_block"></block>
+    <block type="minetest_wool_pink_block"></block>
+    <block type="minetest_wool_magenta_block"></block>
+    <block type="minetest_wool_violet_block"></block>
     <block type="minetest_air_block"></block>
     <block type="minetest_bookshelf_block"></block>
     <block type="minetest_brick_block"></block>
