--- a/blockly/app/assets/stylesheets/blockly.scss
+++ b/blockly/app/assets/stylesheets/blockly.scss
@@ -83,6 +83,11 @@ body.blockly {
       font-size: 140%;
       margin-left: 5px;
       margin-right: 5px;
+      display: inline-block;
+    }
+
+    #trashButton {
+      margin-left: 250px;
     }
 
     /* Tabs */
