#24 dropdown: minetest_materials 追加

--- a/blockly/app/assets/stylesheets/blockly.scss
+++ b/blockly/app/assets/stylesheets/blockly.scss
@@ -171,6 +171,14 @@ body.blockly {
       overflow: scroll;
     }
 
+    .blocklyWidgetDiv {
+
+      .blocklyDropdownMenu {
+        // height: 10em;
+        // overflow: scroll;
+      }
+    }
+
     .restore-modal {
       display: none;
       position: fixed;
