--- a/blockly/app/views/blockly/index.html.erb
+++ b/blockly/app/views/blockly/index.html.erb
@@ -166,6 +166,7 @@
   </category>
 
   <category name="Minetest Blocks" colour="%{BKY_COLOUR_HUE}">
+    <block type="minetest_materials"></block>
     <block type="minetest_wool_random_block"></block>
     <block type="minetest_wool_white_block"></block>
     <block type="minetest_wool_grey_block"></block>
