Change block category width

--- a/blockly/app/views/blockly/index.html.erb
+++ b/blockly/app/views/blockly/index.html.erb
@@ -71,7 +71,7 @@
 </div>
 
 <xml id="toolbox" style="display: none">
-  <category name="Minetest TechMage" colour="%{BKY_COLOUR_HUE}">
+  <category name="TechMage" colour="%{BKY_COLOUR_HUE}">
     <block type="minetest_add_node">
       <value name="material">
         <block type="minetest_dirt_block"></block>
@@ -174,7 +174,7 @@
     </block>
   </category>
 
-  <category name="Minetest Blocks" colour="%{BKY_COLOUR_HUE}">
+  <category name="Blocks" colour="%{BKY_COLOUR_HUE}">
     <block type="minetest_wool_random_block"></block>
     <block type="minetest_wool_white_block"></block>
     <block type="minetest_wool_grey_block"></block>
@@ -202,10 +202,12 @@
     <block type="minetest_diamond_block"></block>
   </category>
 
-  <category name="Minetest Entities" colour="%{BKY_COLOUR_HUE}">
+  <category name="Entities" colour="%{BKY_COLOUR_HUE}">
     <block type="minetest_chicken_entity"></block>
     <block type="minetest_sheep_entity"></block>
   </category>
+
+  <sep></sep>
 
   <category name="%{BKY_CATLOGIC}" colour="%{BKY_LOGIC_HUE}">
     <block type="controls_if"></block>
