--- a/blockly/app/views/blockly/index.html.erb
+++ b/blockly/app/views/blockly/index.html.erb
@@ -126,6 +126,44 @@
       </value>
     </block>
 
+    <block type="minetest_teleport">
+      <value name="name">
+        <block type="text"></block>
+      </value>
+      <value name="x">
+        <shadow type="math_number">
+          <field name="NUM">0</field>
+        </shadow>
+      </value>
+      <value name="y">
+        <shadow type="math_number">
+          <field name="NUM">0</field>
+        </shadow>
+      </value>
+      <value name="z">
+        <shadow type="math_number">
+          <field name="NUM">0</field>
+        </shadow>
+      </value>
+    </block>
+    <block type="minetest_teleport_all">
+      <value name="x">
+        <shadow type="math_number">
+          <field name="NUM">0</field>
+        </shadow>
+      </value>
+      <value name="y">
+        <shadow type="math_number">
+          <field name="NUM">0</field>
+        </shadow>
+      </value>
+      <value name="z">
+        <shadow type="math_number">
+          <field name="NUM">0</field>
+        </shadow>
+      </value>
+    </block>
+
     <block type="minetest_add_entity">
       <value name="entity">
         <block type="minetest_sheep_entity"></block>
