--- a/blockly/app/assets/stylesheets/application.scss
+++ b/blockly/app/assets/stylesheets/application.scss
@@ -15,6 +15,9 @@
  *= require_self
  */
 
+// Custom bootstrap variables must be set or imported *before* bootstrap.
+@import "bootstrap";
+
 html, body {
   height: 100%;
 }
