--- a/blockly/app/assets/stylesheets/blockly.scss
+++ b/blockly/app/assets/stylesheets/blockly.scss
@@ -21,12 +21,15 @@ body.blockly {
     /* Buttons */
     button {
       margin: 1px 5px;
-      padding: 1px 10px;
+      padding: 3px 10px;
       border-radius: 4px;
       border: 1px solid #ddd;
       font-size: large;
       background-color: #eee;
       color: #000;
+
+      height: 28px;
+      padding-top: 3px;
 
       &.primary {
         border: 1px solid #dd4b39;
@@ -81,8 +84,7 @@ body.blockly {
     h1 {
       font-weight: normal;
       font-size: 140%;
-      margin-left: 5px;
-      margin-right: 5px;
+      margin: 8px 5px;
     }
 
     /* Tabs */
@@ -167,8 +169,9 @@ body.blockly {
     }
     #languageMenu {
       vertical-align: top;
-      margin-top: 15px;
+      margin-top: 7.5px;
       margin-right: 15px;
+      height: 29px;
     }
 
     .restore-modal {
