--- a/blockly/app/views/blocklies/index.html.erb
+++ b/blockly/app/views/blocklies/index.html.erb
@@ -1,15 +1,18 @@
 <div class="overlay" id="overlay"></div>
-<ul class="navbar-side" id="navbarSide">
-  <div class="workspaces">
-
+<div class="navbar-side" id="navbarSide">
+  <div class="save-form" id="workspaceForm">
+    <%= render "blocklies/workspaces/new" %>
+  </div>
+  <div class="workspaces" id="workspaces">
+    <%= render "blocklies/workspaces/index", workspaces: @workspaces %>
   </div>
   <div class="language-menu-wrap">
-  <select class="language-menu" id="languageMenu"></select>
+    <select class="language-menu" id="languageMenu"></select>
+  </div>
 </div>
-</ul>
 
 <table width="100%" height="100%">
-  <tr>
+  <tr class="header">
     <td>
       <h1>Mine Blockly</h1>
     </td>
@@ -43,7 +46,7 @@
             <!-- <button id="linkButton" class="notext" title="...">
               <%= image_tag("blockly/1x1.gif", :class => "link icon21") %>
             </button> -->
-            <%= form_tag(run_blockly_index_path, remote: true, class: "flat") do %>
+            <%= form_tag(run_blocklies_path, remote: true, class: "flat") do %>
               <button id="runButton" class="notext primary" title="...">
                 <%= image_tag("blockly/1x1.gif", :class => "run icon21") %>
               </button>
