#24 Add minetest_add_node which is set minetest_materials and math_number on coordinates to TechMage

--- a/blockly/app/views/blockly/index.html.erb
+++ b/blockly/app/views/blockly/index.html.erb
@@ -84,6 +84,21 @@
       </value>
     </block>
 
+    <block type="minetest_add_node">
+      <value name="material">
+        <block type="minetest_materials"></block>
+      </value>
+      <value name="x">
+        <block type="math_number"></block>
+      </value>
+      <value name="y">
+        <block type="math_number"></block>
+      </value>
+      <value name="z">
+        <block type="math_number"></block>
+      </value>
+    </block>
+
     <block type="minetest_add_text_node">
   	  <value name="x">
         <shadow type="math_number">
