Rename title to "Meister Blockly"

--- a/blockly/app/views/blockly/index.html.erb
+++ b/blockly/app/views/blockly/index.html.erb
@@ -1,7 +1,7 @@
 <table width="100%" height="100%">
   <tr>
     <td>
-      <h1>Mine Blockly</h1>
+      <h1>Meister Blockly</h1>
 
       <%= form_tag(run_blockly_index_path, remote: true, class: "flat") do %>
         <button id="runButton" class="notext primary" title="...">
