Move language-menu to footer

--- a/blockly/app/views/blocklies/index.html.erb
+++ b/blockly/app/views/blocklies/index.html.erb
@@ -1,8 +1,9 @@
-<div class="overlay" id="overlay"></div>
+<!-- <div class="overlay" id="overlay"></div>
 <div class="navbar-side" id="navbarSide">
-  <div class="language-menu-wrap">
-    <select class="language-menu" id="languageMenu"></select>
-  </div>
+</div> -->
+
+<div class="footer">
+  <select class="language-menu" id="languageMenu"></select>
 </div>
 
 <div class="dashboard-wrap" id="dashboard-wrap">
@@ -24,9 +25,9 @@
       <h1>Mine Blockly</h1>
     </td>
     <td class="farSide">
-      <button type="button"
+      <!-- <button type="button"
               class="navbar-toggler pull-xs-right"
-              id="navbarSideButton">&#9776;</button>
+              id="navbarSideButton">&#9776;</button> -->
     </td>
   </tr>
   <tr id="workspace-header">
