Change shared workspaces style

--- a/blockly/app/views/blocklies/index.html.erb
+++ b/blockly/app/views/blocklies/index.html.erb
@@ -9,7 +9,7 @@
 <div class="dashboard-wrap" id="dashboard-wrap">
   <div class="overlay" id="overlay"></div>
   <div class="dashboard" id="dashboard">
-    <div class="index" id="index">workspaces</div>
+    <div class="index" id="index">Shared Workspaces</div>
     <div id="workspaceForm">
       <%= render "blocklies/workspaces/new" %>
     </div>
