--- a/blockly/app/assets/stylesheets/blocklies.scss
+++ b/blockly/app/assets/stylesheets/blocklies.scss
@@ -265,7 +265,7 @@ body.blocklies {
     .dashboard-wrap {
       .dashboard {
         padding: 5px;
-        background-color: #f7f7f9;
+        background-color: #e7f8ff;
         position: fixed;
         right: -350px;
         top: 86px;
@@ -278,15 +278,18 @@ body.blocklies {
         }
 
         .index {
-          background: blue;
           color: white;
           font-weight: bold;
           cursor: pointer;
           position: absolute;
-          left: -74px;
-          top: 39px;
+          left: -109px;
+          top: 86px;
           transform: rotate(-90deg);
-          padding: 5px;
+
+          background: #03A9F4;
+          padding: 2px 10px;
+          font-size: 13px;
+          letter-spacing: 2px;
 
           border-radius: 10px 10px 0px 0px;
           -webkit-border-radius: 10px 10px 0px 0px;
@@ -299,19 +302,29 @@ body.blocklies {
           -ms-user-select: none;
         }
 
-        .btn {
-          width: 100%;
-        }
-
-        .save-form {
-
-        }
         .workspaces {
           overflow: auto;
 
-          .name {
-            word-wrap: break-word;
-            font-weight: bold;
+          .row {
+            border-bottom: 2px dashed #91d0ea;
+            padding: 3px 0 3px;
+
+            .name {
+              word-wrap: break-word;
+              font-weight: bold;
+            }
+
+            .restore a {
+              font-size: 14px;
+              font-weight: bold;
+              color: #189a1d;
+            }
+
+            .destroy a {
+              font-size: 14px;
+              font-weight: bold;
+              color: #dc3545;
+            }
           }
         }
       }
