Rename javascript selector names

--- a/blockly/app/views/blocklies/index.html.erb
+++ b/blockly/app/views/blocklies/index.html.erb
@@ -1,16 +1,16 @@
 <!-- <div class="overlay" id="overlay"></div>
-<div class="navbar-side" id="navbarSide">
+<div class="navbar-side" id="navbar_side">
 </div> -->
 
 <div class="footer">
   <select class="language-menu" id="languageMenu"></select>
 </div>
 
-<div class="dashboard-wrap" id="dashboard-wrap">
+<div class="dashboard-wrap" id="dashboard_wrap">
   <div class="overlay" id="overlay"></div>
   <div class="dashboard" id="dashboard">
     <div class="index" id="index">Shared Workspaces</div>
-    <div id="workspaceForm">
+    <div id="workspace_form">
       <%= render "blocklies/workspaces/new" %>
     </div>
     <div class="workspaces" id="workspaces">
@@ -27,10 +27,10 @@
     <td class="farSide">
       <!-- <button type="button"
               class="navbar-toggler pull-xs-right"
-              id="navbarSideButton">&#9776;</button> -->
+              id="navbar_sideButton">&#9776;</button> -->
     </td>
   </tr>
-  <tr id="workspace-header">
+  <tr id="workspace_header">
     <td colspan=2>
       <table width="100%">
         <tr id="tabRow" class="tab-row">
