--- a/blockly/app/views/blocklies/workspaces/_form.html.erb
+++ b/blockly/app/views/blocklies/workspaces/_form.html.erb
@@ -31,8 +31,8 @@
 <% end %>
 
 <script>
-$("#workspaceForm").submit(function(){
-  $("#workspaceForm #xml").val(
+$("#workspace_form").submit(function(){
+  $("#workspace_form #xml").val(
     Blockly.Xml.domToText(
       Blockly.Xml.workspaceToDom(Code.workspace)
     )
