--- a/blockly/app/views/blocklies/workspaces/create.js.erb
+++ b/blockly/app/views/blocklies/workspaces/create.js.erb
@@ -1,11 +1,11 @@
-$("#workspaceForm")
+$("#workspace_form")
   .html('<%= j( render "form", workspace: Workspace.new ) %>');
 
 $("#workspaces")
   .html('<%= j( render "index", workspaces: @workspaces ) %>');
 
 <% if @status == "success" %>
-  $("#dashboard-wrap #dashboard").removeClass("open")
+  $("#dashboard_wrap #dashboard").removeClass("open")
   $("#overlay").hide()
 <% else %>
   alertify.alert("Error")
