Add ruby code tab

--- a/blockly/app/views/blocklies/index.html.erb
+++ b/blockly/app/views/blocklies/index.html.erb
@@ -46,6 +46,8 @@
           <td class="tabmin">&nbsp;</td>
           <td id="tab_dart" class="taboff">Dart</td>
           <td class="tabmin">&nbsp;</td>
+          <td id="tab_ruby" class="taboff">Ruby</td>
+          <td class="tabmin">&nbsp;</td>
           <td id="tab_xml" class="taboff">XML</td>
           <td class="tabmax">
             <button id="trashButton" class="notext" title="...">
@@ -77,6 +79,7 @@
 <pre id="content_php" class="content"></pre>
 <pre id="content_lua" class="content"></pre>
 <pre id="content_dart" class="content"></pre>
+<pre id="content_ruby" class="content"></pre>
 <textarea id="content_xml" class="content-xml content" wrap="off"></textarea>
 
 <div id="restoreModal" class="restore-modal">
