Add disappear block (#18)

--- a/blockly/app/views/blocklies/index.html.erb
+++ b/blockly/app/views/blocklies/index.html.erb
@@ -209,6 +209,7 @@
         </shadow>
       </value>
     </block>
+    <block type="minetest_disappear"></block>
     <block type="minetest_play_sound"></block>
     <block type="minetest_place">
       <value name="material">
