Add 'destroy block' block (#8)

--- a/blockly/app/views/blocklies/index.html.erb
+++ b/blockly/app/views/blocklies/index.html.erb
@@ -211,6 +211,7 @@
     </block>
     <block type="minetest_disappear"></block>
     <block type="minetest_play_sound"></block>
+    <block type="minetest_destroy_block"></block>
     <block type="minetest_place">
       <value name="material">
         <block type="minetest_dirt_block"></block>
