--- a/blockly/app/views/blocklies/index.html.erb
+++ b/blockly/app/views/blocklies/index.html.erb
@@ -22,7 +22,7 @@
 <table width="100%" height="100%">
   <tr class="header" id="header">
     <td>
-      <h1>Mine Blockly</h1>
+      <h1>Blockly Meister</h1>
     </td>
     <td class="farSide">
       <!-- <button type="button"
