Add forever block (#17)

--- a/blockly/app/views/blocklies/index.html.erb
+++ b/blockly/app/views/blocklies/index.html.erb
@@ -194,6 +194,7 @@
         </shadow>
       </value>
     </block>
+    <block type="minetest_forever"></block>
     <block type="minetest_move_forward"></block>
     <block type="minetest_turn">
       <field name="ACTION">turnLeft();</field>
