Add drop block (#6)

--- a/blockly/app/views/blocklies/index.html.erb
+++ b/blockly/app/views/blocklies/index.html.erb
@@ -223,6 +223,11 @@
         <block type="minetest_dirt_block"></block>
       </value>
     </block>
+    <block type="minetest_drop">
+      <value name="item">
+        <block type="minetest_torch_item"></block>
+      </value>
+    </block>
   </category>
 
   <category name="Blocks" colour="%{BKY_COLOUR_HUE}">
@@ -251,6 +256,10 @@
     <block type="minetest_wood_block"></block>
     <block type="minetest_gold_block"></block>
     <block type="minetest_diamond_block"></block>
+  </category>
+
+  <category name="Items" colour="%{BKY_COLOUR_HUE}">
+    <block type="minetest_torch_item"></block>
   </category>
 
   <category name="Entities" colour="%{BKY_COLOUR_HUE}">
